# Card-game

./: .gitignore  Cargo.toml  LICENSE  index.html
Frontend/: Cargo.toml  index.html
Frontend/src/: home.rs  main.rs  style.rs
Frontend/src/game/: board.rs  cards.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
