[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.33.0"
features = ["full"]

[dependencies.axum]
version = "0.6.20"

[dependencies.serde]
version = "1.0.192"
features = ["derive"]